--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
