--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "postuninstall": "electron-builder install-app-deps",
     "vue": "vue"
   },
-  "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "electron-builder": "^23.0.3",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.0.0"
   },
@@ -30,7 +30,10 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "vue-cli-plugin-electron-builder": "^3.0.0-alpha.4"
+  },
+  "resolutions": {
+    "electron-builder": "^23.0.3"
   },
   "eslintConfig": {
     "root": true,
